--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -66,7 +66,13 @@
 
   form {
     background-color: #fff !important;
+    width: 30%;
+    margin: 0 auto;
   }
   label {
     background-color: #fff !important;
   }
+
+  .form {
+    background-color: #fff;
+}
